<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fixtures"
        android:icon="@drawable/ic_fixturessvg"
        android:iconTint="@android:color/white"
        android:checked="true"
        android:title="@string/match" />

    <item
        android:id="@+id/standings"
        android:icon="@drawable/ic_baseline_format_list_numbered_24"
        android:iconTint="@android:color/white"
        android:title="@string/rank" />

    <item
        android:id="@+id/livescores"
        android:icon="@drawable/ic_livescore"
        android:iconTint="@android:color/white"
        android:title="@string/live" />

    <item
        android:id="@+id/topscorers"
        android:icon="@drawable/ic_baseline_accessibility_24"
        android:iconTint="@android:color/white"
        android:title="@string/scorers" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:iconTint="@android:color/white"
        android:title="@string/news" />
</menu>