<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.appui.EventDetailsActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            tools:context=".ui.appui.EventDetailsActivity">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/eventhomelogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:transitionName="@string/transitionhomeicon"
                app:layout_constraintBottom_toTopOf="@+id/guideline39"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintHorizontal_bias="0.734"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline42"
                app:layout_constraintVertical_bias="0.555" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline42"
                app:layout_constraintEnd_toStartOf="@+id/guideline24"
                app:layout_constraintStart_toStartOf="@+id/guideline23"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toTopOf="@+id/guideline39"
                app:layout_constraintEnd_toStartOf="@+id/guideline41"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toTopOf="@+id/guideline42" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/eventawaylogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:transitionName="@string/transitionawayicon"
                app:layout_constraintBottom_toTopOf="@+id/guideline39"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.363"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toTopOf="@+id/guideline42"
                app:layout_constraintVertical_bias="0.555" />

            <TextView
                android:id="@+id/eventdetailsround"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_whitecircle"
                android:gravity="center"
                android:text="11"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline39"
                app:layout_constraintEnd_toStartOf="@+id/guideline24"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="@+id/guideline23"
                app:layout_constraintTop_toTopOf="@+id/guideline42"
                app:layout_constraintVertical_bias="0.555" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toTopOf="@+id/guideline39"
                app:layout_constraintEnd_toStartOf="@+id/guideline23"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@+id/guideline40"
                app:layout_constraintTop_toTopOf="@+id/guideline42" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/fixturetablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline39"
                app:tabGravity="center"
                app:tabIndicatorColor="#4364F7"
                app:tabSelectedTextColor="@android:color/holo_orange_dark"
                app:tabTextColor="@android:color/white" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.62" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.66" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.24" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.77" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.27"
                app:layout_constraintGuide_begin="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottombarshape">

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/fixturesviewpager"/>

        </LinearLayout>

    </LinearLayout>
