<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@android:color/white"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toTopOf="@+id/guideline59"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/playernumber"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_playrshirt"
                android:gravity="center"
                android:text="10"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline58"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.509" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/teamicon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline57"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/playername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/playercountry"
                app:layout_constraintEnd_toStartOf="@+id/guideline58"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/guideline57"
                app:layout_constraintTop_toTopOf="@+id/guideline59"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:id="@+id/playercountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline58"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline57"
                app:layout_constraintTop_toTopOf="@+id/guideline60"
                app:layout_constraintVertical_bias="0.16000003" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline57"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.22" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.82" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline59"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.12" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.52" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>














    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <soup.neumorphism.NeumorphImageButton
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/playerType"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline50"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/playertype"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/guideline50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/playerage"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/guideline51"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="@+id/guideline50"
                app:layout_constraintVertical_bias="0.037"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/textView11"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="@string/playerAge"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline51"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline50"
                app:layout_constraintVertical_bias="0.037"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/playermatchplayed"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/guideline53"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="@+id/guideline51"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/textView12"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="@string/playerMatches"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline53"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline51"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/playergoals"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/guideline55"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="@+id/guideline53"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/textView13"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="@string/playerGoals"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline55"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline53"
                app:neumorph_shapeType="basin" />


            <soup.neumorphism.NeumorphButton
                android:id="@+id/playeryellowcard"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/guideline56"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="@+id/guideline55"
                app:neumorph_shapeType="basin" />


            <soup.neumorphism.NeumorphButton
                android:id="@+id/textView14"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="@string/playerYellowCards"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline56"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline55"
                app:neumorph_shapeType="basin" />


            <soup.neumorphism.NeumorphButton
                android:id="@+id/playerredcard"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                app:layout_constraintTop_toTopOf="@+id/guideline56"
                app:layout_constraintVertical_bias="0.0"
                app:neumorph_shapeType="basin" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/textView15"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:gravity="center"
                android:text="@string/playerRedCards"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline56"
                app:layout_constraintVertical_bias="0.0"
                app:neumorph_shapeType="basin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.42" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.45" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline56"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.75" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
